--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/alt-milo/developerFolio.git",
+  "homepage": "https://alt-milo.github.io/developerFolio",
   "name": "developerfolio",
   "version": "0.1.0",
   "private": true,
